<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>de.janschuri</groupId>
  <artifactId>lunaticfamily-parent</artifactId>
  <version>1.0.0</version>
  <packaging>pom</packaging>

  <name>LunaticFamily</name>
    <modules>
        <module>lunaticfamily</module>
        <module>lunaticfamily-common</module>
        <module>lunaticfamily-platform</module>
        <module>lunaticfamily-interface</module>
    </modules>


    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <buildName>LunaticFamily</buildName>
    </properties>

  <repositories>
      <repository>
          <id>spigot-repo</id>
          <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
      </repository>
      <repository>
          <id>papermc-repo</id>
          <url>https://repo.papermc.io/repository/maven-public/</url>
      </repository>
      <repository>
          <id>jitpack.io</id>
          <url>https://jitpack.io</url>
      </repository>
      <repository>
          <id>sonatype</id>
          <url>https://oss.sonatype.org/content/groups/public/</url>
      </repository>
      <repository>
          <id>placeholderapi</id>
          <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
      </repository>
  </repositories>

    <dependencies>
        <dependency>
            <groupId>de.janschuri</groupId>
            <artifactId>lunaticlib</artifactId>
            <version>1.4.4</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
</project>
